src/test/ui/parser/parser-recovery-2.stderr
error: unexpected token: `;`
  --> $DIR/parser-recovery-2.rs:10:15
   |
LL |     let x = y.;
   |               ^

error: mismatched closing delimiter: `)`
  --> $DIR/parser-recovery-2.rs:4:14
   |
LL |     fn bar() {
   |              ^ unclosed delimiter
LL |         let x = foo();
LL |     )
   |     ^ mismatched closing delimiter

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/parser-recovery-2.rs:5:17
   |
LL |         let x = foo();
   |                 ^^^ not found in this scope

error[E0425]: cannot find value `y` in this scope
  --> $DIR/parser-recovery-2.rs:10:13
   |
LL |     let x = y.;
   |             ^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
